--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ einx~=0.3.0
 click~=8.1.7
 pathlib~=1.0.1
 gemmi~=0.6.7
-rdkit~=2024.3.6
+rdkit
 timeout-decorator~=0.5.0
 retrying~=1.3.4
 joblib~=1.2.0
@@ -28,4 +28,6 @@ huggingface-hub~=0.26.2
 packaging~=23.1
 environs~=11.2.1
 jaxtyping~=0.2.36
+
+
 
