--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,18 @@
-loguru~=0.7.2
-beartype~=0.19.0
-numpy~=1.26.4
-polars~=1.15.0
-scipy~=1.13.1
-cachetools~=4.2.2
-torch~=2.5.1
-biopython~=1.84
-einops~=0.8.0
-einx~=0.3.0
-click~=8.1.7
-pathlib~=1.0.1
-gemmi~=0.6.7
-rdkit
-timeout-decorator~=0.5.0
-retrying~=1.3.4
-joblib~=1.2.0
-pdbeccdutils~=0.8.5
-yaml~=0.2.5
-pyyaml~=6.0.1
-pydantic~=2.10.2
-lightning~=2.4.0
-ema-pytorch~=0.7.6
-shortuuid~=1.0.13
-sh~=2.1.0
-tqdm~=4.67.1
-huggingface-hub~=0.26.2
-packaging~=23.1
-environs~=11.2.1
-jaxtyping~=0.2.36
-
-
+loguru
+beartype
+numpy
+polars
+scipy
+cachetools
+torch
+biopython
+einops
+pathlib
+ema-pytorch
+lightning
+shortuuid
+sh
+einx
+tqdm
+huggingface-hub
 
